--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,4 +1,9 @@
 # Imports
+import textwrap
+
+
+configfile: "config.base.yaml"
+snakemake.utils.min_version("8.20")
 
 # Config  # Should go in config.yaml
 ## Main singularity image
@@ -27,19 +32,49 @@
 
 # Metadata  # Paths to metadata files should go in config.yaml?
 ## Load species list
-## Load species genes list
+## Load species genes list?
 ## Load metagenome paths
 
+
+# Write Auxiliary Log/Config/Input Files
+rule write_species_list:
+    output:
+        "{config[outdir]}/input/species.list",
+    params:
+        species_list=lambda w: "\n".join(config["species_list"]),
+    shell:
+        textwrap.dedent("""
+        cat <<EOF > {output}
+        {params.species_list}
+        EOF
+        """)
+
+
 # Pre-processing Metagenomes
+## Link input reads
+rule symlink_input_reads:
+    output:
+        r1="{config[outdir]}/preprocess/reads/{mgen}/r1.fq.gz",
+        r2="{config[outdir]}/preprocess/reads/{mgen}/r2.fq.gz",
+    input:
+        r1=lambda w: config["input"]["reads"][w.mgen]["r1_path"]
+        r2=lambda w: config["input"]["reads"][w.mgen]["r2_path"]
+    shell:
+        """
+        ln -rs {input.r1} {output.r1}
+        ln -rs {input.r2} {output.r2}
+        """
+
+
 ## Filter-out host reads
 rule filter_out_human_reads:
     output:
-        r1="data/reads/{mgen}/r1{stem}hfilt.fq.gz",
-        r2="data/reads/{mgen}/r2{stem}hfilt.fq.gz",
+        r1="{config[outdir]}/preprocess/reads/{mgen}/r1{stem}hfilt.fq.gz",
+        r2="{config[outdir]}/preprocess/reads/{mgen}/r2{stem}hfilt.fq.gz",
     input:
         script="scripts/filter_out_mapping_reads.sh",  # FIXME
-        r1="data/reads/{mgen}/r1{stem}fq.gz",
-        r2="data/reads/{mgen}/r2{stem}fq.gz",
+        r1="{config[outdir]}/preprocess/reads/{mgen}/r1{stem}fq.gz",
+        r2="{config[outdir]}/preprocess/reads/{mgen}/r2{stem}fq.gz",
         index=[
             "{config[host_index_stem]}.1.bt2",
             "{config[host_index_stem]}.2.bt2",
@@ -62,12 +97,12 @@ rule filter_out_human_reads:
 ## Deduplicate
 rule deduplicate_reads:
     output:
-        r1=temp("data/reads/{mgen}/r1{stem}dedup.fq.gz"),
-        r2=temp("data/reads/{mgen}/r2{stem}dedup.fq.gz"),
+        r1=temp("{config[outdir]}/preprocess/reads/{mgen}/r1{stem}dedup.fq.gz"),
+        r2=temp("{config[outdir]}/preprocess/reads/{mgen}/r2{stem}dedup.fq.gz"),
     input:
         script="scripts/fastuniq_wrapper.sh",  # FIXME
-        r1="data/reads/{mgen}/r1{stem}fq.gz",
-        r2="data/reads/{mgen}/r2{stem}fq.gz",
+        r1="{config[outdir]}/preprocess/reads/{mgen}/r1{stem}fq.gz",
+        r2="{config[outdir]}/preprocess/reads/{mgen}/r2{stem}fq.gz",
     resources:
         mem_mb=10_000,
     shell:
@@ -77,59 +112,171 @@ rule deduplicate_reads:
 ## Adapter trim
 rule trim_adapters:
     output:
-        fq=temp("data/reads/{mgen}/{stem}.deadapt.fq.gz"),
+        fq=temp("{config[outdir]}/preprocess/reads/{mgen}/{stem}.deadapt.fq.gz"),
     input:
         adapters="ref/illumina_adapters.fn",
-        fq="data/reads/{mgen}/{stem}.fq.gz",
+        fq="{config[outdir]}/preprocess/reads/{mgen}/{stem}.fq.gz",
     log:
         "log/{stem}.scythe.log",
     threads: 2
     shell:
-        dd(
-            """
+        """
         scythe -a {input.adapters} {input.fq} 2>{log} | gzip -c > {output.fq}
         ! grep -Fxq 'Blank FASTA header or sequence in adapters file.' {log}
         """
-        )
 
 
 ## Quality trim
 rule quality_trim_reads:
     output:
-        r1=temp("data/reads/{mgen}/r1{stem}qtrim.fq.gz"),
-        r2=temp("data/reads/{mgen}/r2{stem}qtrim.fq.gz"),
-        r3=temp("data/reads/{mgen}/r3{stem}qtrim.fq.gz"),
+        r1=temp("{config[outdir]}/preprocess/reads/{mgen}/r1{stem}qtrim.fq.gz"),
+        r2=temp("{config[outdir]}/preprocess/reads/{mgen}/r2{stem}qtrim.fq.gz"),
+        r3=temp("{config[outdir]}/preprocess/reads/{mgen}/r3{stem}qtrim.fq.gz"),
     input:
-        r1="data/reads/{mgen}/r1{stem}fq.gz",
-        r2="data/reads/{mgen}/r2{stem}fq.gz",
+        r1="{config[outdir]}/preprocess/reads/{mgen}/r1{stem}fq.gz",
+        r2="{config[outdir]}/preprocess/reads/{mgen}/r2{stem}fq.gz",
     params:
         qual_type="sanger",
         qual_thresh=20,
     shell:
-        dd(
-            """
+        """
         sickle pe -t {params.qual_type} -q {params.qual_thresh} --gzip-output \
             --pe-file1 {input.r1} --pe-file2 {input.r2} \
             --output-pe1 {output.r1} --output-pe2 {output.r2} \
             --output-single {output.r3}
         """
-        )
 
 ## Alias Preprocessed Reads
 rule alias_preprocessed_reads:
-    output: "data/reads/{mgen}/{stem}.proc.fq.gz"
-    input:  "data/reads/{mgen}/{stem}.{config[proc_infix]}.fq.gz"
+    output: "{config[outdir]}/preprocess/reads/{mgen}/{stem}.proc.fq.gz"
+    input:  "{config[outdir]}/preprocess/reads/{mgen}/{stem}.{config[preprocess_infix]}.fq.gz"
     shell:
-        "ln -rs {input} {output}"
+        "ln {input} {output}"
+
+
+# MIDAS and Pangenome Profiling
+## Build MIDASDB index
+rule build_midas_pangenomes_bowtie_index:
+    output:
+        dir=directory("{config[outdir]}/midas/pangenome_reference.bt2.d"),
+    input:
+        midasdb_dir=config["midasdb_dir"],
+        species_list="{config[outdir]}/input/species.list",
+    conda:
+        "conda/midas3.yaml"
+    threads: 96
+    resources:
+        mem_mb=480_000,
+    shell:
+        """
+        midas2 build_bowtie2db \
+                --bt2_indexes_dir {output.dir} \
+                --bt2_indexes_name pangenomes \
+                --midasdb_name newdb \
+                --midasdb_dir {input.midasdb_dir} \
+                --select_threshold=-1 \
+                --species_list {input.species_list} \
+                --num_cores {threads} \
+                --prune_centroids \
+                --remove_singleton
+        """
+
+## Align
+rule run_midas_genes_align_only:
+    output:
+        bam=precious("{config[outdir]}/midas/reads/{mgen}/pangenome_profile_raw.bam"),
+    input:
+        species_list="{config[outdir]}/input/species.list",
+        midasdb_dir=config["midasdb_dir"],
+        bowtie_indexes="{config[outdir]}/midas/pangenome_reference.bt2.d",
+        r1="{config[outdir]}/preprocess/reads/{mgen}/r1.proc.fq.gz",
+        r2="{config[outdir]}/preprocess/reads/{mgen}/r2.proc.fq.gz",
+    params:
+        outdir="{config[outdir]}/midas/reads/{mgen}/pangenome_profile.midas.d",
+        outbam="{config[outdir]}/midas/reads/{mgen}/pangenome_profile.midas.d/{mgen}/genes/{mgen}.bam",
+    conda:
+        "conda/midas3.yaml"
+    threads: 4
+    resources:
+        mem_mb=80_000,
+    shell:
+        """
+        midas run_genes --num_cores {threads} \
+                -1 {input.r1} -2 {input.r2} \
+                --sample_name {wildcards.mgen} \
+                --midasdb_name newdb \
+                --midasdb_dir {input.midasdb_dir} \
+                --prebuilt_bowtie2_indexes {input.bowtie_indexes}/pangenomes \
+                --prebuilt_bowtie2_species {input.species_list} \
+                --select_threshold=-1 \
+                --aln_speed sensitive \
+                --aln_extra_flags '--mm --ignore-quals' \
+                --total_depth 0 \
+                --cluster_level 75 \
+                --alignment_only \
+                {params.outdir}
+        ln {params.outbam} {output.bam}
+        """
+
+## Profile
+rule midas_profile_genes:
+    output:
+        temp("{config[outdir]}/midas/reads/{mgen}/pangenome_profile_raw.gene_mapping_tally.tsv.bz2"),
+    input:
+        "{config[outdir]}/midas/reads/{mgen}/pangenome_profile_raw.bam",
+    conda:
+        "conda/bowtie2.yaml"
+    threads: 1
+    shell:
+        """
+        samtools depth -@ {threads} -g SECONDARY --min-MQ 0 {input} \
+            | awk -v OFS='\t' '\\
+                BEGIN {{gene_id="__START__"; depth_tally=0}} \\
+                $1==gene_id {{depth_tally+=$3}} \\
+                $1!=gene_id {{print gene_id, depth_tally; gene_id=$1; depth_tally=0}} \\
+                END {{print gene_id,depth_tally}} \\
+                ' \
+            | (echo 'gene_id\ttally'; sed '1,1d') \
+            | lz4 -9 -zc > {output}.temp
+        mv {output}.temp {output}
+        """
+
+## Merge
+rule merge_and_aggregate_pangenome_profiles:
+    output:
+        temp("{config[outdir]}/midas/species/{species}/pangenome_profile.depth.tsv.bz2"),
+    input:
+        script="scripts/merge_and_aggregate_pangenome_profiles.py",
+        samples=lambda w: [
+            f"{config[outdir]}/midas/reads/{mgen}/pangenome_profile_raw.gene_mapping_tally.tsv.lz4"
+            for mgen in config[mgen_list]
+        ],
+        gene_info="{config[midasdb_dir]}/pangenomes/{species}/genes_info.tsv",
+    params:
+        args=lambda w: [
+            f"mgen={config[outdir]}/midas/reads/{mgen}/pangenome_profile_raw.gene_mapping_tally.tsv.lz4"
+            for mgen in config[mgen_list]
+        ],
+        agg_col=f"centroid_{config[pangenome_profiling_agg_level]}",
+    conda:
+        "conda/toolz.yaml"
+    threads: 1
+    resources:
+        mem_mb=20_000,
+    shell:
+        """
+        {input.script} {input.gene_info} {params.agg_col} {output} {params.args}
+        """
+
 
 
 # GT-Pro
 ## Run core algorithm
 rule run_gtpro:
     output:
-        temp("data/gtpro/{mgen}/{stem}.gtpro_raw.gz"),
+        temp("{config[outdir]}/gtpro/reads/{mgen}/{r}.snv_counts_raw.bz2"),
     input:
-        r="data/reads/{mgen}/{stem}.fq.gz",
+        r="{config[outdir]}/preprocess/reads/{mgen}/{r}.proc.fq.gz",
         db="ref/gtpro",
     params:
         db_l=32,
@@ -137,21 +284,21 @@ rule run_gtpro:
         db_name=config["gtpro_ref_stem"]  # FIXME "ref/gtpro/20190723_881species",  # FIXME
     threads: 8
     resources:
-        mem_mb=10000,
+        mem_mb=10_000,
     container:
         config["container"]["gtpro"]
     shell:
         """
-        GT_Pro genotype -t {threads} -l {params.db_l} -m {params.db_m} -d {params.db_name} -o {output}.temp {input.r}
-        mv {output}.temp.tsv.gz {output}
+        gzip -cd {input.r} | GT_Pro genotype -t {threads} -l {params.db_l} -m {params.db_m} -d {params.db_name} | bzip2 -c > {output}.temp
+        mv {output}.temp {output}
         """
 
 ## Postprocess
 rule gtpro_finish_processing_reads:
     output:
-        "data/gtpro/{mgen}/{stem}.gtpro_parse.tsv.bz2",
+        temp("{config[outdir]}/gtpro/reads/{mgen}/snv_counts.tsv.bz2"),
     input:
-        "data/gtpro/{mgen}/{stem}.gtpro_raw.gz",
+        "{config[outdir]}/gtpro/reads/{mgen}/snv_counts_raw.bz2",
     container:
         config["container"]["gtpro"]
     shell:
@@ -160,14 +307,14 @@ rule gtpro_finish_processing_reads:
 ## Merge
 rule merge_gtpro_counts:
     output:
-        "data/species/{species}/r.proc.gtpro.tsv.bz2",
+        temp("{config[outdir]}/species/gtpro/{species}/snv_counts.tsv.bz2"),
     input:
         script="scripts/merge_gtpro_counts.py",  # FIXME
-        r1=[f"data/gtpro/{mgen}/r1.proc.gtpro_parse.tsv.bz2" for mgen in config[mgen_list]]
-        r2=[f"data/gtpro/{mgen}/r2.proc.gtpro_parse.tsv.bz2" for mgen in config[mgen_list]]
+        r1=[f"{config[outdir]}/gtpro/reads/{mgen}/r1.snv_counts.tsv.bz2" for mgen in config["mgen_list"]]
+        r2=[f"{config[outdir]}/gtpro/reads/{mgen}/r2.snv_counts.tsv.bz2" for mgen in config["mgen_list"]]
     params:
         species=lambda w: w.species,
-        args=[f"{mgen}=data/gtpro/{mgen}/r1.proc.gtpro_parse.tsv.bz2:data/gtpro/{mgen}/r2.proc.gtpro_parse.tsv.bz2" for mgen in config["mgen_list"]]
+        args=[f"{mgen}={config[outdir]}/gtpro/{mgen}/r1.snv_counts.tsv.bz2:{config[outdir]}/gtpro/{mgen}/r2.snv_counts.tsv.bz2" for mgen in config["mgen_list"]]
     threads: 6
     shell:
         """
@@ -179,9 +326,9 @@ rule merge_gtpro_counts:
 ## Load
 rule load_metagenotype_from_merged_gtpro:
     output:
-        "data/sfacts/{stem}.gtpro.mgtp.nc",
+        "{config[outdir]}/sfacts/species/{species}/snv_counts.mgtp.nc",
     input:
-        "data/sfacts/{stem}.gtpro.tsv.bz2",
+        "{config[outdir]}/gtpro/species/{species}/snv_counts.tsv.bz2",
     conda:
         "conda/sfacts.yaml"
     shell:
@@ -192,9 +339,9 @@ rule load_metagenotype_from_merged_gtpro:
 ## Filter
 rule filter_metagenotype:
     output:
-        "data/sfacts/{stem}.filt-poly{poly}-cvrg{cvrg}.mgtp.nc",
+        temp("{config[outdir]}/sfacts/species/{species}/{stem}.filt-poly{poly}-cvrg{cvrg}.mgtp.nc"),
     input:
-        "data/sfacts/{stem}.mgtp.nc",
+        "{config[outdir]}/sfacts/species/{species}/{stem}.mgtp.nc",
     wildcard_constraints:
         poly="[0-9]+",
         cvrg="[0-9]+",
@@ -217,9 +364,9 @@ rule filter_metagenotype:
 ## Subsample
 rule subset_metagenotype:
     output:
-        "data/sfacts/{stem}.ss-g{num_positions}-block{block_number}-seed{seed}.mgtp.nc",
+        temp("{config[outdir]}/sfacts/species/{species}/{stem}.filt-{filt_stem}.ss-g{num_positions}-block{block_number}-seed{seed}.mgtp.nc"),
     input:
-        "data/sfacts/{stem}.mgtp.nc",
+        "{config[outdir]}/sfacts/species/{species}/{stem}.mgtp.nc",
     wildcard_constraints:
         num_positions=integer_wc,
         block_number=integer_wc,
@@ -244,11 +391,11 @@ rule subset_metagenotype:
 ## Fit
 rule fit_sfacts:
     output:
-        fit="data/sfacts/{stem}.fit-sfacts{strategy}-s{strain_exponent}-seed{seed}.world.nc",
-        hist="data/sfacts/{stem}.fit-sfacts{strategy}-s{strain_exponent}-seed{seed}.loss_history",
+        fit="{config[outdir]}/sfacts/species/{species}/{stem}.fit-strat{strategy}-s{strain_exponent}-seed{seed}.sfacts-fit.nc",
+        hist="{config[outdir]}/sfacts/species/{species}/{stem}.fit-strat{strategy}-s{strain_exponent}-seed{seed}.loss_history",
     input:
-        mgen="data/sfacts/{stem}.mgtp.nc",
-        strategy=config["sfacts_strategy_file"],
+        mgen="{config[outdir]}/sfacts/species/{species}/{stem}.mgtp.nc",
+        strategy=f"{config[sfact_strategy_dir]}/strategy{strategy}.args",
     wildcard_constraints:
         strain_exponent="[0-9]+",
         nposition="[0-9]+",
@@ -274,9 +421,9 @@ rule fit_sfacts:
 ## Export strain details
 rule export_sfacts_comm:
     output:
-        "{stem}.comm.tsv",
+        "{stem}.strain_composition.tsv",
     input:
-        "{stem}.world.nc",
+        "{stem}.sfacts-fit.nc",
     conda:
         "conda/sfacts.yaml"
     shell:
@@ -285,17 +432,88 @@ rule export_sfacts_comm:
         """
 
 ## Select strain-pure samples
-
-
-# MIDAS and Depth Profiling
-## Build MIDASDB index
-## Align
-## Profile
-## Merge
+rule identify_strain_samples:
+    output:
+        "{config[outdir]}/spgc/species/{species}/strain_pure_samples.tsv",
+    input:
+        lambda w: "{config[outdir]}/sfacts/species/{species}/{config[sfacts_string]}.strain_composition.tsv",
+    params:
+        frac_thresh=config['purity_threshold'],  # FIXME
+    shell:
+        """
+        awk -v OFS='\t' -v thresh={params.frac_thresh} 'NR > 1 && $3 > thresh {{print $1,$2}}' {input} > {output}
+        """
 
 
 # StrainPGC
 ## Run
+rule run_spgc:
+    output:
+        "{config[outdir]}/spgc/species/{species}/spgc.results.nc",
+    input:
+        pangenome_profile="{config[outdir]}/midas/species/{species}/pangenome_profile.depth.tsv.bz2",
+        strain_pure_samples="{config[outdir]}/spgc/species/{species}/strain_pure_samples.tsv",
+        species_genes="{config[outdir]}/input/species/{species}/species_genes.list"
+    params:
+        trim_frac_species_genes=0.15,  # FIXME: Move into config?
+        species_free_thresh=1e-4,
+        depth_ratio_thresh=lambda w: int(w.dthresh) / 1000,
+        corr_thresh=lambda w: int(w.cthresh) / 1000,
+    conda:
+        "conda/toolz4.yaml"
+    shell:
+        """
+        spgc run --full-output \
+             --trim-frac-species-genes {params.trim_frac_species_genes} \
+             --species-free-thresh {params.species_free_thresh} \
+             --depth-ratio-thresh {params.depth_ratio_thresh} \
+             --correlation-thresh {params.corr_thresh} \
+             {input.pangenome_profile} \
+             {input.species_genes} \
+             {input.strain_pure_samples} \
+             {output}
+        """
+
+
+## Write Gene Content
+rule output_spgc_gene_content:
+    output: "{config[outdir]}/results/species/{species}/spgc.gene.tsv"
+    input:
+        script="scripts/extract_strain_gene_hits_from_spgc_netcdf.py",  # FIXME: Is there a "dump" subcommand?
+        spgc="{config[outdir]}/spgc/species/{species}/spgc.results.nc",
+    conda:
+        "conda/spgc.yaml"
+    shell:
+        "{input.script} {input.spgc} {output}"
+
+## Aggregate metagenotype
+rule aggregate_strain_metagenotype:
+    output:
+        "{config[outdir]}/results/species/{species}/snv_counts.strain.mgtp.nc",
+    input:
+        script="scripts/aggregate_strain_metagenotypes_across_strain_samples.py",
+        mgtp="{config[outdir]}/sfacts/species/{species}/snv_counts.mgtp.nc",
+        mapping="{config[outdir]}/spgc/species/{species}/strain_pure_samples.tsv",
+    conda:
+        "conda/sfacts.yaml"
+    resources:
+        mem_mb=10_000,
+    shell:
+        "{input.script} {input.mapping} {input.mgtp} {output}"
+
+
 ## Compile metadata
-### Aggregate metagenotype
-### Finalize
+rule compile_spgc_strain_summary:
+    output:
+        "{config[outdir]}/results/species/{species}/spgc.strain.tsv",
+    input:
+        script="scripts/compile_spgc_results_metadata.py",
+        # TODO: Take genotype QC and metadata from a purpose-built script.
+        agg_mgtp="{config[outdir]}/results/species/{species}/snv_counts.strain_pure.mgtp.nc",
+        spgc="{config[outdir]}/spgc/species/{species}/spgc.results.nc",
+    params:
+        ambig_thresh=0.1,
+    conda:
+        "conda/toolz5.yaml"
+    shell:
+        "{input.script} {input.spgc} {input.agg_mgtp} {params.ambig_thresh} {output}"
