--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -2,15 +2,20 @@
 import textwrap
 
 
-configfile: "config.base.yaml"
 snakemake.utils.min_version("8.20")
 
 # Config  # Should go in config.yaml
-## Main singularity image
-## GT-Pro singularity image
-## Path to host bowtie2 index
-## Path to Illumina adapters
-## Path to MIDASDB
+
+## Workflow config.
+# This is all of the default config values, and does not include any data-specific
+# configuration.
+configfile: "workflow/config.yaml"
+### Main singularity image
+### GT-Pro singularity image
+## Dataset config
+### Path to host bowtie2 index
+### Path to Illumina adapters
+### Path to MIDASDB
 ## Run parameters
 ### Preprocesing infix (e.g. hfilt.dedup.deadapt.qtrim}
 ### Strain-tracking
@@ -30,7 +35,7 @@ snakemake.utils.min_version("8.20")
 #### Correlation threshold
 #### Depth-ratio threshold
 
-# Metadata  # Paths to metadata files should go in config.yaml?
+# Metadata  # Paths to metadata files should go in project specific config.yaml?
 ## Load species list
 ## Load species genes list?
 ## Load metagenome paths
@@ -57,7 +62,7 @@ rule symlink_input_reads:
         r1="{config[outdir]}/preprocess/reads/{mgen}/r1.fq.gz",
         r2="{config[outdir]}/preprocess/reads/{mgen}/r2.fq.gz",
     input:
-        r1=lambda w: config["input"]["reads"][w.mgen]["r1_path"]
+        r1=lambda w: config["input"]["reads"][w.mgen]["r1_path"]  # FIXME: Construct this metadata as part of config.
         r2=lambda w: config["input"]["reads"][w.mgen]["r2_path"]
     shell:
         """
@@ -313,7 +318,7 @@ rule run_gtpro:
     params:
         db_l=32,
         db_m=36,
-        db_name=config["gtpro_ref_stem"]  # FIXME "ref/gtpro/20190723_881species",  # FIXME
+        db_name=config["gtpro_ref_stem"]  # FIXME "ref/gtpro/20190723_881species"
     threads: 8
     resources:
         mem_mb=10_000,
