--- a/examples/example1/config.yaml
+++ b/examples/example1/config.yaml
@@ -1,13 +1,15 @@
-outdir: 'examples/example1/results'
-sample_manifest_path: 'examples/example1/sample.tsv'
-species_list_path: 'examples/example1/species.list'
-species_gene_path: 'examples/example1/species_gene.tsv'
-host_bt2_index_stem: 'examples/ref/GRCh38.bt2.d/GRCh38'
-illumina_adapters_fasta_path: 'examples/ref/illumina_adapters.fa'
-midasdb_dir: 'examples/ref/midasdb_uhgg.d'
+outdir: ''
+sample_manifest_path: 'sample.tsv'
+species_list_path: 'species.list'
+species_gene_path: 'species_gene.tsv'
+host_bt2_index_stem: '../ref/GRCh38.bt2.d/GRCh38'
+illumina_adapters_fasta_path: '../ref/illumina_adapters.fa'
+midasdb_dir: '../ref/midasdb_uhgg.d'
 preprocessing_infix: 'hfilt.dedup.deadapt.qtrim'
 sfacts_infix: 'filt-poly05-cvrg05.ss-g1000-block0-seed0.sfacts-s85-seed0'
-sfacts_strategy_path: 'examples/example1/sfacts_strategy.args'
+sfacts_strategy_path: 'sfacts_strategy.args'
 pangenome_profiling_agg_level: '75'
-gtpro_ref_dir: "examples/ref/gtpro"
-gtpro_ref_name: 'examples/ref/gtpro/20190723_881species'
+gtpro_ref_dir: "../ref/gtpro"
+gtpro_ref_name: '../ref/gtpro/20190723_881species'
+
+target_all_noprefix: ['species/102506/spgc.strain.tsv', 'species/102506/spgc.gene.tsv']
