Move example outputs back into results.

--- a/examples/example1/config.yaml
+++ b/examples/example1/config.yaml
@@ -1,4 +1,4 @@
-outdir: ''
+outdir: 'results'
 sample_manifest_path: 'sample.tsv'
 species_list_path: 'species.list'
 species_gene_path: 'species_gene.tsv'
