Update container to include graphviz.

--- a/workflow/envs/Dockerfile
+++ b/workflow/envs/Dockerfile
@@ -71,3 +71,8 @@ RUN \
 ADD . src/StrainPGC/
 RUN \
     pip install -e src/StrainPGC/
+
+RUN \
+    mamba install -y -c conda-forge \
+        graphviz \
+    && conda clean -afy
