--- a/examples/wf_example/config.yaml
+++ b/examples/wf_example/config.yaml
@@ -4,13 +4,13 @@ gtpro_container: 'docker://bsmith89/gtpro@sha256:dedf350917364f7c3018124fdb9840f
 sample_manifest_path: 'sample.tsv'
 species_list_path: 'species.list'
 species_gene_path: 'species_gene.tsv'
-host_bt2_index_stem: '../ref/GRCh38.bt2.d/GRCh38'
-illumina_adapters_fasta_path: '../ref/illumina_adapters.fa'
-midasdb_dir: '../ref/midasdb_uhgg.d'
+host_bt2_index_stem: 'ref/GRCh38.bt2.d/GRCh38'
+illumina_adapters_fasta_path: 'ref/illumina_adapters.fa'
+midasdb_dir: 'ref/midasdb_uhgg.d'
 preprocessing_infix: 'hfilt.dedup.deadapt.qtrim'
 sfacts_infix: 'filt-poly05-cvrg05.ss-g10000-block0-seed0.sfacts-s85-seed0'
 sfacts_strategy_path: 'sfacts_strategy.args'
 pangenome_profiling_agg_level: '75'
-gtpro_ref_name: "../ref/gtpro/20190723_881species"
-gtpro_ref_dir: '../ref/gtpro'
+gtpro_ref_name: "ref/gtpro/20190723_881species"
+gtpro_ref_dir: 'ref/gtpro'
 target_all_noprefix: ['species/102506/spgc.strain.tsv', 'species/102506/spgc.gene.tsv']
