Start reorganizing README quickstart. Move example data download scripts into examples directories. Drop human read filtering from example mgen preprocessing.

--- a/examples/wf_example/config.yaml
+++ b/examples/wf_example/config.yaml
@@ -7,7 +7,7 @@ species_gene_path: 'species_gene.tsv'
 host_bt2_index_stem: 'ref/GRCh38.bt2.d/GRCh38'
 illumina_adapters_fasta_path: 'ref/illumina_adapters.fa'
 midasdb_dir: 'ref/midasdb_uhgg.d'
-preprocessing_infix: 'hfilt.dedup.deadapt.qtrim'
+preprocessing_infix: 'dedup.deadapt.qtrim'
 sfacts_infix: 'filt-poly05-cvrg05.ss-g10000-block0-seed0.sfacts-s85-seed0'
 sfacts_strategy_path: 'sfacts_strategy.args'
 pangenome_profiling_agg_level: '75'
